Signup related changes